<resources>
    <string name="app_name">Auto Clicker</string>
    <string name="ver">Version</string>

    <string name="ads_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="ads_app_unit_id">/6499/example/banner</string>

    <string name="notification_channel_name" translatable="false">AutoClicker</string>
    <string name="notification_title">"Loaded: %s"</string>
    <string name="notification_message">Press to change the configure</string>

    <string name="back_press">Back again to exists.</string>

    <string name="activity_auto_clicker_title">Auto Clicker</string>
    <string name="fragment_config_list_title">Config list</string>
    <string name="fragment_choose_item_title">{0} item choose</string>

    <string name="fragment_general_setting_title">General setting</string>
    <string name="size_of_the_target">Size of the target</string>
    <string name="dimensions_of_the_control_bar">Size of the control bar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="accessibility_service_label">AutoClick Service</string>
    <string name="accessibility_service_description">This application needs this service to inject the clicks you have
        created into the other applications once the conditions have been detected.\n\nNo data will be collected from
        this application.</string>

    <string name="content_desc_play_pause_configure">Play or pause</string>
    <string name="content_desc_add_touch">Add touch</string>
    <string name="content_desc_add_swipe">Add swipe</string>
    <string name="content_desc_add_zoom_out">Add zoom out</string>
    <string name="content_desc_add_zoom_in">Add zoom in</string>
    <string name="content_desc_remove_action">Remove last action</string>
    <string name="content_desc_setting_configure">Setting configure</string>
    <string name="content_desc_exists_the_configure">Exists configure</string>
    <string name="content_desc_open_recent">Open recent app</string>
    <string name="content_desc_go_home">Go to home screen</string>
    <string name="content_desc_go_back">Go back</string>
    <string name="content_desc_open_notification">Open notification</string>
    <string name="content_desc_show_hidden">Show or hide actions</string>

    <string name="content_desc_collapse_expand_floating_menu">Collapse or expand menu</string>

    <string name="content_desc_dialog_title_icon">The dialog title icon.</string>
    <string name="content_desc_overlay_state">Overlay permission state</string>
    <string name="content_desc_accessibility_state">Accessibility service permission state</string>
    <string name="content_desc_play_configure">Play configure</string>
    <string name="content_desc_edit_configure">Edit configure</string>
    <string name="content_desc_delete_configure">Delete configure</string>
    <string name="content_desc_float_action">Float Action</string>

    <string name="setting_title_default_setting_configure">Default settings for configure</string>
    <string name="setting_title_default_setting_action">Default settings for actions</string>
    <string name="setting_title_anti_detection">Anti-detection</string>
    <string name="setting_title_other_settings">Other settings</string>

    <!-- === Default settings for config ===  -->
    <!-- Thời gian trễ vòng lặp -->
    <string name="setting_content_stop_the_loop_by">Stop the loop by</string>
    <!-- Thời gian trễ vòng lặp -->
    <string name="setting_content_loop_delay_time">Loop delay time</string>

    <!-- === Default settings for actions ===  -->
    <!-- Thời gian trễ hành động -->
    <string name="setting_content_action_delay_time">Action delay time</string>
    <!--Thời gian thực hiện hành động bấm-->
    <string name="setting_content_time_click_action_exec">Click action execution time</string>
    <!--Thời gian thực hiện hành động vuốt-->
    <string name="setting_content_time_swipe_action_exec">Swipe action execution time</string>
    <!--Thời gian thực hiện hành động thu phóng-->
    <string name="setting_content_time_zoom_action_exec">Zoom action execution time</string>

    <!-- === Anti-detection ===  -->
    <string name="setting_content_increase_random_action_delay_time">Increase random action delay time</string>
    <string name="setting_content_random_location">Random location</string>

    <!-- === Other settings ===  -->
    <string name="setting_content_remove_ads">Remove ads</string>
    <string name="setting_content_general_settings">General settings</string>
    <string name="setting_content_solving_trouble">Solving trouble</string>

    <string name="setting_content_desc_n_milliseconds">{0} milliseconds</string>
    <string name="setting_content_desc_n_time">{0} times</string>
    <string name="setting_content_desc_infinite">Infinite repeat</string>
    <string name="setting_content_desc_countdown_timer">Countdown timer: {0}</string>
    <string name="setting_content_desc_n_px">{0} px</string>

    <string name="setting_content_desc_remove_ads">All ads are removed</string>
    <string name="setting_content_desc_general_settings">Floating menu size setting</string>
    <string name="setting_content_desc_solving_trouble">The app doesn\'t work</string>

    <string name="menu_about_us">About Us</string>
    <string name="menu_rate_app">Rate app</string>
    <string name="menu_share_app">Share app</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_license">License</string>
    <string name="menu_privacy_policy">Privacy policy</string>
    <string name="menu_reset_setting">Reset setting</string>
    <string name="menu_add_new_configure">Add new configure</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_list_configure">List configure</string>

    <string name="dialog_title_select_loop_stop_condition">Select loop stop condition</string>
    <string name="dialog_title_loop_delay_time">Loop delay time</string>
    <string name="dialog_title_time_wait_next_action">Time to wait for next action</string>
    <string name="dialog_title_time_click_action_exec">Click action execution time</string>
    <string name="dialog_title_time_swipe_action_exec">Swipe action execution time</string>
    <string name="dialog_title_time_zoom_action_exec">Zoom action execution time</string>
    <string name="dialog_title_increase_random_wait_time">Increase random wait time</string>
    <string name="dialog_title_random_location">Random location</string>
    <string name="dialog_title_time_setting">Time setting</string>
    <string name="dialog_title_permissions">Permissions required</string>
    <string name="dialog_title_add_configure">New configure</string>
    <string name="dialog_title_rename_configure">Rename configure</string>
    <string name="dialog_title_copy_configure">Copy configure</string>
    <string name="dialog_title_delete_configure">Delete configure</string>
    <string name="dialog_title_stop_service">Stop service</string>
    <string name="dialog_title_choose_configure">Choose a configure</string>
    <string name="dialog_title_rate_app">Rate app</string>
    <string name="dialog_title_reset_setting">Reset setting</string>

    <string name="dialog_desc_loop_delay_time">Time delay before executing next loop</string>
    <string name="dialog_desc_time_wait_next_action">Time delay before taking the next action</string>
    <string name="dialog_desc_how_long_will_the_action_take">How long will the action take?</string>
    <string name="dialog_desc_increase_random_wait_time">Set random delay between actions</string>
    <string name="dialog_desc_random_location">Set radius of random click</string>
    <string name="dialog_desc_permissions">The following permissions are required to use AutoClicker.</string>
    <string name="dialog_desc_delete_configure_message">This will delete %1$s. Are you sure ?</string>
    <string name="dialog_desc_delete_configures_message">This will delete %d configures forever.</string>
    <string name="dialog_desc_discard_content">Discard content and exit?</string>
    <string name="dialog_desc_reset_setting_warning">Do you want reset all setting?</string>

    <string name="dialog_stop_loop_infinite_loop">Infinite loop</string>
    <string name="dialog_stop_loop_number_of_loops">Number of loops:</string>
    <string name="dialog_stop_loop_countdown_timer">Countdown timer</string>

    <string name="dialog_edit_minimum">Minimum: %d</string>
    <string name="dialog_edit_maximum">Maximum: %d</string>

    <string name="back">Back</string>
    <string name="milliseconds">milliseconds</string>
    <string name="pixel">px</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <string name="dialog_permission_overlay">Overlay</string>
    <string name="dialog_permission_overlay_desc">The overlay permission allows this application to display a menu
                                                  over other apps.</string>
    <string name="dialog_permission_accessibility">Accessibility service</string>
    <string name="dialog_permission_accessibility_desc">The accessibility service allows this application to click on
                                                        other apps for you.</string>
    <string name="dialog_add_configure_name_hint">Name</string>


    <string name="dialog_choose_configure_no_have_configure">No have configure</string>
    <string name="dialog_choose_configure_create_new">Create New</string>

    <string name="dialog_setting_configure_load_configure">Load Configure</string>
    <string name="dialog_setting_configure_stop_later">Stop later</string>

    <string name="dialog_setting_action_action_duration">Action duration</string>

    <string name="dialog_rate_app_desc">If you enjoy using this app, please take a moment to rate it so we can make better updates in the future.\nThanks for your support!</string>
    <string name="dialog_rate_rate_now">Rate now</string>
    <string name="dialog_rate_no_thanks">No, thanks</string>
    <string name="dialog_rate_remind_me_later">Remind me later</string>

    <plurals name="item_configure_detail">
        <item quantity="zero">No action</item>
        <item quantity="one">%d action</item>
        <item quantity="other">%d actions</item>
    </plurals>

    <string name="bottom_nav_setting_target">Target</string>
    <string name="bottom_nav_setting_menu">Float menu</string>

    <string name="size">Size</string>
    <string name="brightness">Brightness</string>
    <string name="custom_color">Custom Color</string>
    <string name="orientation">Orientation</string>
    <string name="current_control">Current control</string>
    <string name="more_control">More control</string>
    <string name="menu_limit">The number of control has limit.\nPlease remove a control item</string>

    <!-- test-->
    <string name="wait">wait…</string>
    <string name="title">Sample Activity #%d</string>



</resources>