<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting_content_general_settings" />
    <item
        android:id="@+id/menu_solving_trouble"
        android:icon="@drawable/ic_solving_trouble"
        android:title="@string/setting_content_solving_trouble" />
    <item
        android:id="@+id/menu_remove_ads"
        android:icon="@drawable/ic_ad_block_2"
        android:title="@string/setting_content_remove_ads" />

    <item android:title="@string/menu_about_us">
        <menu>
            <item
                android:id="@+id/menu_rate_app"
                android:icon="@drawable/ic_rate"
                android:title="@string/menu_rate_app" />
            <item
                android:id="@+id/menu_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/menu_feedback" />
            <item
                android:id="@+id/menu_share_app"
                android:icon="@drawable/ic_share"
                android:title="@string/share_app" />
            <item
                android:id="@+id/menu_license"
                android:icon="@drawable/ic_license"
                android:title="@string/menu_license" />
            <item
                android:id="@+id/menu_privacy_policy"
                android:icon="@drawable/ic_privacy_policy"
                android:title="@string/menu_privacy_policy" />
        </menu>

    </item>


</menu>