<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_stroke_grey_bot">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_vertical_large">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_vertical_default"
            android:orientation="vertical">

            <TextView
                style="@style/DialogActionAndConfigTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_content_action_delay_time" />

            <TextView
                style="@style/DialogActionAndConfigDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_desc_time_wait_next_action" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_horizontal_mini"
                app:suffixText="@string/milliseconds"
                app:suffixTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_action_delay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="10"
                    android:text="0"
                    tools:ignore="HardcodedText" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_vertical_default"
            android:orientation="vertical">

            <TextView
                style="@style/DialogActionAndConfigTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_setting_action_action_duration" />

            <TextView
                style="@style/DialogActionAndConfigDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_desc_how_long_will_the_action_take" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_horizontal_mini"
                app:suffixText="@string/milliseconds"
                app:suffixTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_action_duration"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="10"
                    android:text="0"
                    tools:ignore="HardcodedText" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_anti_detection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_title_anti_detection"
            android:textSize="@dimen/text_size_description"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>
</ScrollView>