<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_condition_max_width"
        tools:viewBindingIgnore="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_horizontal_default"
            android:text="@string/dialog_desc_permissions"
            android:textSize="@dimen/text_size_description"/>

        <include layout="@layout/include_view_separator"/>

        <RelativeLayout
            android:id="@+id/item_overlay_permission"
            style="@style/PermissionItemView">

            <TextView
                android:id="@+id/text_config_overlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@id/img_config_overlay_status"
                android:layout_marginTop="@dimen/margin_vertical_small"
                android:gravity="center_vertical"
                android:text="@string/dialog_permission_overlay"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold"
                tools:text="@string/dialog_permission_overlay"/>

            <TextView
                android:id="@+id/text_config_overlay_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_config_overlay"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/margin_vertical_small"
                android:layout_marginBottom="@dimen/margin_vertical_small"
                android:layout_toStartOf="@id/img_config_overlay_status"
                android:gravity="center_vertical"
                android:text="@string/dialog_permission_overlay_desc"
                android:textSize="@dimen/text_size_item_description"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/img_config_overlay_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_small"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/margin_horizontal_small"
                android:scaleType="fitCenter"
                android:contentDescription="@string/content_desc_overlay_state"
                tools:src="@drawable/ic_confirm"
                tools:tint="@color/primary"/>

        </RelativeLayout>

        <include layout="@layout/include_view_separator"/>

        <RelativeLayout
            android:id="@+id/item_accessibility_permission"
            style="@style/PermissionItemView">

            <TextView
                android:id="@+id/text_config_accessibility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@id/img_config_accessibility_status"
                android:layout_marginTop="@dimen/margin_vertical_small"
                android:gravity="center_vertical"
                android:text="@string/dialog_permission_accessibility"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text_config_accessibility_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_config_accessibility"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/margin_vertical_small"
                android:layout_marginBottom="@dimen/margin_vertical_small"
                android:layout_toStartOf="@id/img_config_accessibility_status"
                android:gravity="center_vertical"
                android:text="@string/dialog_permission_accessibility_desc"
                android:textSize="@dimen/text_size_item_description"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/img_config_accessibility_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/margin_horizontal_small"
                android:contentDescription="@string/content_desc_accessibility_state"
                android:padding="@dimen/margin_horizontal_small"
                android:scaleType="fitCenter"
                tools:src="@drawable/ic_cancel"
                tools:tint="@android:color/holo_red_light" />

        </RelativeLayout>

        <include layout="@layout/include_view_separator"/>

    </LinearLayout>

</ScrollView>